Fixed bug #45303 (Opening php:// wrapper in append mode results in a warning)